--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=api
-spring.datasource.url=jdbc:postgresql://localhost:5432/eventostec
+spring.datasource.url=jdbc:postgresql://cv-eventostec-database.cp8uoes6c0ox.us-east-1.rds.amazonaws.com/postgres
 spring.datasource.username=postgres
-spring.datasource.password=admin123
+spring.datasource.password=|5V5fOqxD$XHLDz~{cZq[[K<WxH!
 aws.region=us-east-2
 aws.bucket.name=cv-eventostec-imagens
